--- a/index.html
+++ b/index.html
@@ -4,8 +4,127 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Architect Mafia</title>
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="./styles/header.css">
+  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/footer.css">
+<!-- google font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@500&family=Roboto:wght@500&family=Work+Sans&display=swap" rel="stylesheet">
+
 </head>
-<body>
-  
+<body >
+ <div class="bg-color">
+   <!-- header start -->
+   <header class="header">
+    <div class="header-container">
+      <div class="header-tit">
+        <h2>
+          G3 Architects
+        </h2>
+      </div>
+      <nav class="nav">
+     <a href="">Home</a><a href="">About</a><a href="">contact</a><a href="">Login</a>
+      </nav>
+    </div>
+  </header>
+<!-- header end -->
+<!-- main start -->
+<main>
+  <!-- 1st section start-->
+       <section class="first-section">
+        <div class="fs-container">
+          <h3 >Brand New 
+          
+            </h3>
+            <h3 class="fs-tit">
+              Group of Architects 
+              </h3>
+            <p class="fs-des">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            </p>
+            <p class="fs-des">
+               some form, by injected humour, or randomised words which don't look even
+            </p>
+            <a class="btn" href="">Explore More</a>
+        </div>
+       </section>
+  <!-- 1st section end -->
+  <!-- 2nd section start -->
+  <section class="second-section">
+    <div class="ss-container">
+      <div class="ss-img"></div>
+    </div>
+  </section>
+  <!-- 2nd section end -->
+ </div>
+ <!-- setted bg color for certain section -->
+ <!-- 3rd section start -->
+ <section class="third-section">
+  <div class="ts-container">
+    <div class="parts">
+      <div class="part1">
+        <img src="./images/team1.png" alt="">
+        <img src="./images/team2.png" alt="">
+        <img src="./images/team3.png" alt="">
+        <img src="./images/team4.png" alt="">
+      </div>
+      <div class="part2">
+        <h3>
+          Quick list <span class="one">of Our</span> <span class="two">Features</span>
+        </h3>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <a class="btn" href="">Explore More</a>
+      </div>
+    </div>
+  </div>
+ </section>
+ <!-- 3rd section  end -->
+ <!-- 4th section start -->
+<section class="fourth-section">
+  <div class="features">
+    <h3>Features you will love & enjoy</h3>
+    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+    <div class="line1"></div>
+    <div class="line2"></div>
+  </div>
+  <div class="fos-container">
+<div class="fos-parts">
+  <div class="fos-part1">
+
+    <div class="des">
+      <h3>Dexktop & Mobile Version</h3>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+    <div class="des">
+      <h3>Drag & Drop Builder</h3>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+    <div class="des">
+      <h3>Awesome Modern Design</h3>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+    <div class="des">
+      <h3>Super Easy to Edit</h3>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+  </div>
+  <div class="fos-part2">
+    <img src="./images/architect.png" alt="">
+  </div>
+</div>
+<div class="experience">
+  <h3>10+Year
+ </h3>
+ <span>Experience</span>
+</div>
+  </div>
+</section>
+ <!-- 4th section end -->
+</main>
+<!-- main end -->
+
+
 </body>
 </html>
