--- a/index.html
+++ b/index.html
@@ -122,9 +122,109 @@
   </div>
 </section>
  <!-- 4th section end -->
+ <!-- 5th section start -->
+<section class="fif-section">
+  <div class="ff-container">
+    <div class="ff-box">
+      <h3>Some Facts</h3>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </div>
+  </div>
+</section>
+ <!-- 5th section end -->
+ <!-- 6th section start -->
+ <section class="sixth-section">
+  <div class="six-container">
+    <div class="boxes">
+      <div class="box">
+        <img src="./icons/ribon.png" alt="">
+        <h3>54</h3>
+        <p>Awards winnings</p>
+      </div>
+      <div class="box">
+        <img src="./icons/projects.png" alt="">
+        <h3>1458</h3>
+        <p>Project Finished</p>
+      </div>
+      <div class="box">
+        <img src="./icons/customers.png" alt="">
+        <h3>590</h3>
+        <p>Client Worked</p>
+      </div>
+      <div class="box">
+        <img src="./icons/email.png" alt="">
+        <h3>22578</h3>
+        <p>Email Send</p>
+      </div>
+    </div>
+  </div>
+ </section>
+  <!-- 6th section end -->
+  <!-- 7th section start -->
+<section class="seventh-section">
+  <h3>Our Happy <span>clients</span> </h3>
+  <div class="sev-container">
+    <div class="rect">
+      <div class="rect-img">
+        <img src="./images/jhankar.jpg" alt="">
+        <h4>Jhankar</h4>
+      </div>
+      <div class="rect-des">
+        <p>"These guys are true professionals. From the initial meeting and drawings through punch out lists and actually getting the key, Zach and his crew were amazing. I’d 100% recommend using them for any project!"</p>
+      </div>
+    </div>
+<div class="rect rect2">
+  <div class="rect-img">
+    <img src="./images/ayman.jpg" alt="">
+    <h4>Ayman</h4>
+  </div>
+  <div class="rect-des">
+    <p> "I purchased my home from Rose after they completely overhauled the entire property and I’ve been very happy with it.  Great finishes and craftmanship.  Naimur did it right"</p>
+  </div>
+</div>
+<div class="rect">
+  <div class="rect-img">
+    <img src="./images/ishraque.jpg" alt="">
+    <h4>Ishraque</h4>
+  </div>
+  <div class="rect-des">
+    <p>"Had a great overall experience with zach as his team. Kyle was very professional and knowledgeable of the codes.Their plans for my remodel where very accurate and permitting was a breeze"</p>
+  </div>
+</div>
+
+  </div>
+</section>
+  <!-- 7th section end -->
+
+    <!-- 8th section start -->  
+
+  <section class="eighth-section">
+    <div class="et-container">
+      <div class="et-parts">
+        <div class="et-part1">
+          <h3>Our Sponspors</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="et-part2">
+          <img src="./sponsors/amazon.png" alt="">
+          <img src="./sponsors/figma.png" alt="">
+          <img src="./sponsors/spotify.png" alt="">
+          <img src="./sponsors/telerama.png" alt="">
+          <img src="./sponsors/google.png" alt="">
+     
+        </div>
+      </div>
+    </div>
+  </section>
+    <!-- 8th section end -->
 </main>
 <!-- main end -->
-
-
+<!-- footer start -->
+<footer class="footer">
+  <div class="footer-container">
+    <p>All rights reserved copyright@2023 startup landing page design</p>
+  </div>
+</footer>
+<!-- footer end -->
 </body>
 </html>
