--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
  </h3>
  <span>Experience</span>
 </div>
+
+<div class="experience1">
+  <h3>10+Year
+ </h3>
+ <span>Experience</span>
+</div>
   </div>
 </section>
  <!-- 4th section end -->
@@ -164,7 +170,7 @@
 <section class="seventh-section">
   <h3>Our Happy <span>clients</span> </h3>
   <div class="sev-container">
-    <div class="rect">
+    <div class="rect rect1">
       <div class="rect-img">
         <img src="./images/jhankar.jpg" alt="">
         <h4>Jhankar</h4>
@@ -182,7 +188,7 @@
     <p> "I purchased my home from Rose after they completely overhauled the entire property and I’ve been very happy with it.  Great finishes and craftmanship.  Naimur did it right"</p>
   </div>
 </div>
-<div class="rect">
+<div class="rect rect1">
   <div class="rect-img">
     <img src="./images/ishraque.jpg" alt="">
     <h4>Ishraque</h4>
